cmake_minimum_required(VERSION 3.20)
project(hello)

set(CMAKE_CXX_STANDARD 14)

add_executable(hello main.cpp C++基础/day.cpp C++基础/bool.cpp C++基础/cin.cpp C++基础/运算符.cpp C++基础/if.cpp C++基础/三目运算.cpp 算法/算法2_水仙花.cpp C++基础/for.cpp 算法/算法1_猜数字.cpp 算法/算法3_敲桌子.cpp C++基础/嵌套循环.cpp 算法/算法4_乘法口诀表.cpp C++基础/goto.cpp C++基础/数组.cpp C++基础/函数.cpp 算法/算法5_五只小猪.cpp 算法/算法6_元素逆置.cpp 算法/算法7_冒泡排序.cpp 算法/算法8_成绩统计.cpp C++基础/结构体.cpp C++基础/指针.cpp pointh/max1.cpp pointh/max1.h C++基础/指针和数组.cpp pointh/swap.cpp pointh/swap.h C++基础/指针和函数.cpp C++基础/指针数组函数.cpp C++基础/结构体指针.cpp C++基础/结构体参数.cpp 算法/算法9_结构体1.cpp)
